Atualizando o css para responsivo

--- a/index.html
+++ b/index.html
@@ -122,8 +122,7 @@
           voz e sua perspectiva são importantes para nós.
           <br />
           <br />
-          Por favor, entre em contato conosco através do e-mail [seu endereço de
-          e-mail]. Estamos ansiosos para ouvir suas ideias e propostas de
+          Por favor, entre em contato conosco através do e-mail [Dnllira2@gmail.com]. Estou ansioso para ouvir suas ideias e propostas de
           conteúdo. Lembre-se, este é um projeto aberto a todos,
           independentemente de sua experiência ou formação acadêmica.
           Acreditamos que todos têm algo valioso para compartilhar.
