--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           ></strong
         >
       </p>
-      <h6>Novos post de vez em quando</h6>
+      <h6 class="cor">Novos post de vez em quando</h6>
 
       <span>Feito com 💖 por Daniel Lira</span>
     </aside>
