Adicionado função dark-mode

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
     <title>A Arte do Entendimento Demorado</title>
   </head>
   <body>
+
+    <!-- Botão light / night -->
+    <div class="manha-noite">
+      <input type="checkbox" class="checkbox" id="chk" />
+
+      <label class="label" for="chk">
+        <i class="fas fa-moon"></i>
+        <i class="fas fa-sun"></i>
+        <div class="ball"></div>
+      </label>
+
+    </div>
+
     <aside>
       <img src="./assets/logo-2.png" alt="Brain" />
       <img src="./assets/logoDnllira.png" alt="Daniel LOGO" />
@@ -141,5 +154,10 @@
         </p>
       </div>
     </nav>
+    <script src="./script.js/script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/998c60ef77.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
