Refatoração do html

--- a/index.html
+++ b/index.html
@@ -1,159 +1,95 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- Muda o ícone padrão do navegador -->
-    <link rel="icon" type="img/png" href="./assets/logo1.png" />
-    <link rel="stylesheet" href="style.css" />
-    <title>A Arte do Entendimento Demorado</title>
-  </head>
-  <body>
-
-    <!-- Botão light / night -->
-    <div class="manha-noite">
-      <input type="checkbox" class="checkbox" id="chk" />
-      <label class="label" for="chk">
-        <i class="fas fa-moon"></i>
-        <i class="fas fa-sun"></i>
-        <div class="ball"></div>
-      </label>
-    </div>
-
-    <aside>
-      <img src="./assets/logo-2.png" alt="Brain" />
-      <img src="./assets/logoDnllira.png" alt="Daniel LOGO" />
-
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="./assets/logo1.png">
+  <link rel="stylesheet" href="./css/style.css">
+  <title>A Arte do Entendimento Demorado</title>
+</head>
+<body>
+  <div class="manha-noite">
+    <input type="checkbox" class="checkbox" id="chk">
+    <label class="label" for="chk">
+      <i class="fas fa-moon"></i>
+      <i class="fas fa-sun"></i>
+      <div class="ball"></div>
+    </label>
+  </div>
+  <aside>
+    <img src="./assets/logo-2.png" alt="Brain">
+    <img src="./assets/logoDnllira.png" alt="Daniel LOGO">
+    <p>
+      A Arte do Entendimento Demorado <br>
+      <strong><a href="https://github.com/Danielalveslira?tab=repositories" target="_blank">Daniel Lira</a></strong>
+    </p>
+    <h6 class="cor">Novos posts de vez em quando</h6>
+  </aside>
+  <nav>
+    <div href="" target="_blank" class="memory">
+      <small>24 de março de 2023</small>
+      <h1>A Arte do Entendimento Demorado</h1>
+      <div>
+        <img src="./assets/logo1.png" alt="Apresentação">
+      </div>
       <p>
-        A Arte do Entendimento Demorado <br />
-        <strong>
-          <a
-            href="https://github.com/Danielalveslira?tab=repositories"
-            target="_blank"
-            >Daniel Lira</a
-          ></strong
-        >
+        "A Arte do Entendimento Demorado" refere-se a uma abordagem que valoriza a paciência, a contemplação e a dedicação para alcançar um nível mais profundo de compreensão.
+        <br>
+        <br>
+        Em um mundo cada vez mais rápido e imediatista, muitas vezes tendemos a buscar respostas rápidas e soluções instantâneas. No entanto, alguns assuntos ou questões complexas exigem tempo e esforço para serem verdadeiramente compreendidos.
+        <br>
+        <br>
+        "A Arte do Entendimento Demorado" propõe que devemos adotar uma abordagem mais lenta e contemplativa ao lidar com tais assuntos. Em vez de apenas aceitar informações superficiais ou respostas prontas, é preciso mergulhar profundamente, explorar diferentes perspectivas, fazer perguntas, buscar conhecimento adicional e refletir sobre o assunto em questão.
+        <br>
+        <br>
+        Essa abordagem incentiva a paciência e a perseverança na busca por respostas e insights mais completos. Ela valoriza o processo de aprendizagem em si, reconhecendo que nem todas as perguntas têm respostas fáceis ou rápidas. Ao adotar essa mentalidade, podemos desenvolver uma compreensão mais profunda e significativa do mundo ao nosso redor, promovendo assim o crescimento pessoal e intelectual.
+        <br>
+        <br>
+        "A Arte do Entendimento Demorado" nos lembra que o verdadeiro conhecimento muitas vezes requer tempo, dedicação e uma mente aberta para explorar as complexidades e nuances de um assunto. É uma abordagem que nos encoraja a apreciar a jornada do aprendizado e a abraçar a busca constante pelo conhecimento em vez de buscar apenas respostas rápidas e superficiais. Bem-vindo! ♥️
+        <!--<a href="">olaaa</a> Adicionar link futuro-->
       </p>
-      <h6 class="cor">Novos post de vez em quando</h6>
-    </aside>
-
-    <nav>
-      <div href="" target="_blank" class="memory">
-        <small>24 de março de 2023</small>
-        <h1>A Arte do Entendimento Demorado</h1>
-        <div>
-          <img src="./assets/logo1.png" alt="Apresentação" />
-        </div>
-        <p>
-          "A Arte do Entendimento Demorado" refere-se a uma abordagem que
-          valoriza a paciência, a contemplação e a dedicação para alcançar um
-          nível mais profundo de compreensão.
-          <br />
-          <br />
-
-          Em um mundo cada vez mais rápido e imediatista, muitas vezes tendemos
-          a buscar respostas rápidas e soluções instantâneas. No entanto, alguns
-          assuntos ou questões complexas exigem tempo e esforço para serem
-          verdadeiramente compreendidos.
-          <br />
-          <br />
-          "A Arte do Entendimento Demorado" propõe que devemos adotar uma
-          abordagem mais lenta e contemplativa ao lidar com tais assuntos. Em
-          vez de apenas aceitar informações superficiais ou respostas prontas, é
-          preciso mergulhar profundamente, explorar diferentes perspectivas,
-          fazer perguntas, buscar conhecimento adicional e refletir sobre o
-          assunto em questão.
-          <br />
-          <br />
-          Essa abordagem incentiva a paciência e a perseverança na busca por
-          respostas e insights mais completos. Ela valoriza o processo de
-          aprendizagem em si, reconhecendo que nem todas as perguntas têm
-          respostas fáceis ou rápidas. Ao adotar essa mentalidade, podemos
-          desenvolver uma compreensão mais profunda e significativa do mundo ao
-          nosso redor, promovendo assim o crescimento pessoal e intelectual.
-          <br />
-          <br />
-          "A Arte do Entendimento Demorado" nos lembra que o verdadeiro
-          conhecimento muitas vezes requer tempo, dedicação e uma mente aberta
-          para explorar as complexidades e nuances de um assunto. É uma
-          abordagem que nos encoraja a apreciar a jornada do aprendizado e a
-          abraçar a busca constante pelo conhecimento em vez de buscar apenas
-          respostas rápidas e superficiais. Bem vindo! ♥️
-          <!--<a href="">olaaa</a> Adicionar link futuro-->
-        </p>
+    </div>
+    <div href="" target="_blank" class="memory">
+      <small>20 de março de 2023</small>
+      <h1>Olá a todos!</h1>
+      <div>
+        <img src="./assets/universo.png" alt="Programador">
       </div>
-
-      <div href="" target="_blank" class="memory">
-        <small>20 de março de 2023</small>
-        <h1>Olá a todos!</h1>
-        <div>
-          <img src="./assets/universo.png" alt="Programador" />
-        </div>
-        <p>
-          Estou aqui hoje para falar sobre um projeto muito especial chamado "A
-          Arte do Entendimento Demorado" e convidar cada um de vocês a se
-          juntarem a nós nessa jornada. <br />
-          <br />
-          Quando pensei em criar esse projeto, fui inspirado pelo incrível poder
-          de compartilhar conhecimento e perspectivas diversas. acredito que a
-          colaboração e a diversidade de ideias são fundamentais para criar algo
-          verdadeiramente notável.
-          <br />
-          <br />
-          O objetivo do "A Arte do Entendimento Demorado" é preencher um espaço
-          online com conteúdos criativos e informativos sobre temas
-          interessantes e importantes. Queremos inspirar, informar e envolver
-          nossa comunidade de maneira profunda e significativa.
-          <br />
-          <br />
-          Estou buscando a colaboração de pessoas talentosas e apaixonadas por
-          produzir conteúdo relevante. Se você é um escritor talentoso, um
-          jornalista experiente, um especialista em algum campo específico ou
-          alguém com um grande interesse em compartilhar informações valiosas,
-          convido você a se juntar a nós nessa empreitada.
-          <br />
-          <br />
-          O tema central do projeto é flexível e estamos abertos a sugestões e
-          ideias de todos vocês. Nossa intenção é criar um espaço que desperte
-          curiosidade, promova discussões saudáveis e ajude as pessoas a
-          expandir seus horizontes.
-          <br />
-          <br />
-          Você pode fazer a diferença! Se você estiver interessado em
-          contribuir, ficarei honrado em recebê-lo como parte desse projeto. Sua
-          voz e sua perspectiva são importantes para nós.
-          <br />
-          <br />
-          Por favor, entre em contato conosco através do e-mail
-          [Dnllira2@gmail.com]. Estou ansioso para ouvir suas ideias e propostas
-          de conteúdo. Lembre-se, este é um projeto aberto a todos,
-          independentemente de sua experiência ou formação acadêmica.
-          Acreditamos que todos têm algo valioso para compartilhar.
-          <br />
-          <br />
-          Agradeço sinceramente por dedicar seu tempo e energia a essa mensagem.
-          Juntos, podemos construir algo notável que deixará um legado positivo
-          para nossa comunidade e além.
-          <br />
-          <br />
-          <strong>
-            Vamos embarcar nessa jornada do entendimento demorado juntos!
-          </strong>
-          <!--<a href="">olaaa</a> Adicionar link futuro-->
-        </p>
-      </div>
-    </nav>
-    <script src="./script.js/script.js"></script>
-    <script
-      src="https://kit.fontawesome.com/998c60ef77.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      <p>
+        Estou aqui hoje para falar sobre um projeto muito especial chamado "A Arte do Entendimento Demorado" e convidar cada um de vocês a se juntarem a nós nessa jornada.
+        <br>
+        <br>
+        Quando pensei em criar esse projeto, fui inspirado pelo incrível poder de compartilhar conhecimento e perspectivas diversas. Acredito que a colaboração e a diversidade de ideias são fundamentais para criar algo verdadeiramente notável.
+        <br>
+        <br>
+        O objetivo do "A Arte do Entendimento Demorado" é preencher um espaço online com conteúdos criativos e informativos sobre temas interessantes e importantes. Queremos inspirar, informar e envolver nossa comunidade de maneira profunda e significativa.
+        <br>
+        <br>
+        Estou buscando a colaboração de pessoas talentosas e apaixonadas por produzir conteúdo relevante. Se você é um escritor talentoso, um jornalista experiente, um especialista em algum campo específico ou alguém com um grande interesse em compartilhar informações valiosas, convido você a se juntar a nós nessa empreitada.
+        <br>
+        <br>
+        O tema central do projeto é flexível e estamos abertos a sugestões e ideias de todos vocês. Nossa intenção é criar um espaço que desperte curiosidade, promova discussões saudáveis e ajude as pessoas a expandir seus horizontes.
+        <br>
+        <br>
+        Você pode fazer a diferença! Se você estiver interessado em contribuir, ficarei honrado em recebê-lo como parte desse projeto. Sua voz e sua perspectiva são importantes para nós.
+        <br>
+        <br>
+        Por favor, entre em contato conosco através do e-mail [Dnllira2@gmail.com]. Estou ansioso para ouvir suas ideias e propostas de conteúdo. Lembre-se, este é um projeto aberto a todos, independentemente de sua experiência ou formação acadêmica. Acreditamos que todos têm algo valioso para compartilhar.
+        <br>
+        <br>
+        Agradeço sinceramente por dedicar seu tempo e energia a essa mensagem. Juntos, podemos construir algo notável que deixará um legado positivo para nossa comunidade e além.
+        <br>
+        <br>
+        <strong>Vamos embarcar nessa jornada do entendimento demorado juntos!</strong>
+        <!--<a href="">olaaa</a> Adicionar link futuro-->
+      </p>
+    </div>
+  </nav>
+  <script src="./script.js/script.js"></script>
+  <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
+</body>
 </html>
