Adicionado um footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" href="./assets/logo1.png">
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>A Arte do Entendimento Demorado</title>
 </head>
 <body>
@@ -25,9 +26,38 @@
     <img src="./assets/logoDnllira.png" alt="Daniel LOGO">
     <p>
       A Arte do Entendimento Demorado <br>
-      <strong><a href="https://github.com/Danielalveslira?tab=repositories" target="_blank">Daniel Lira</a></strong>
     </p>
-    <h6 class="cor">Novos posts de vez em quando</h6>
+    <h6>Novos posts de vez em quando</h6>
+
+    <section class="footer">
+      <div class="social">
+        <a target="blank" href="https://github.com/Danielalveslira"><i class="fab fa-github"></i></a>
+        <a target="_blank" href="https://wa.me/5584996550186"><i class="fab fa-whatsapp"></i></a>
+        <a target="blank" href="https://www.linkedin.com/in/dnllira"><i class="fab fa-linkedin"></i></a>
+      </div>
+  
+      <ul class="list">
+        <li>
+          <a target="blank" href="">Home</a>
+        </li>
+  
+        <li>
+          <a target="blank" href="#">Museu</a>
+        </li>
+  
+        <li>
+          <a target="blank" href="#">Sobre</a>
+        </li>
+  
+        <li>
+          <a target="blank" href="#">Status</a>
+        </li>
+      </ul>
+      <p class="copyright">
+        &#169
+        2023 Todos os direitos reservados.
+      </p>
+    </section>
   </aside>
   <nav>
     <div href="" target="_blank" class="memory">
@@ -90,6 +120,5 @@
     </div>
   </nav>
   <script src="./script.js/script.js"></script>
-  <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 </body>
 </html>
