Aviso de manutenção adicionado

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
   <title>A Arte do Entendimento Demorado</title>
 </head>
 <body>
+<!-- Aviso de manutenção -->
+  <div style="background-color: #f8d7da; color: #721c24; padding: 20px; text-align: center;">
+    <h1>Ops! Parece que os nossos engenheiros estão brincando com as ferramentas...</h1>
+    <p>Estamos realizando algumas mágicas de código para tornar o nosso site ainda mais incrível! Volte em breve para ver os truques que preparamos para você.</p>
+ </div>
+
   <div id="title">
     <h1>A Arte do Entendimento Demorado</h1>
     <div class="manha-noite">
@@ -20,7 +26,7 @@
       <label class="label" for="chk">
         <i class="fas fa-moon"></i>
         <i class="fas fa-sun"></i>
-        <div class="ball"></div>
+        <i class="ball"></i>
       </label>
     </div>
   </div>
