--- a/index.html
+++ b/index.html
@@ -13,12 +13,7 @@
   <title>A Arte do Entendimento Demorado</title>
 </head>
 <body>
-<!-- Aviso de manutenção -->
-  <div style="background-color: #f8d7da; color: #721c24; padding: 20px; text-align: center;">
-    <h1>Ops! Parece que os nossos engenheiros estão brincando com as ferramentas...</h1>
-    <p>Estamos realizando algumas mágicas de código para tornar o nosso site ainda mais incrível! Volte em breve para ver os truques que preparamos para você.</p>
- </div>
-
+  
   <div id="title">
     <h1>A Arte do Entendimento Demorado</h1>
     <div class="manha-noite">
@@ -42,7 +37,7 @@
     </li>
 
     <li>
-      <a target="blank" href="#">Post popular</a>
+      <a target="blank" href="#">popular</a>
     </li>
 
     <li>
