Bug fixed - moon / sun

--- a/index.html
+++ b/index.html
@@ -58,80 +58,36 @@
         <img class="img" src="./assets/logo1.png" alt="Apresentação">
       </div>
       <p>
-        "A Arte do Entendimento Demorado" refere-se a uma abordagem que valoriza a paciência, a contemplação e a dedicação para alcançar um nível mais profundo de compreensão.
-        "A Arte do Entendimento Demorado" refere-se a uma abordagem que valoriza a paciência, a contemplação e a dedicação para alcançar um nível mais profundo de compreensão.
+        "A Arte do Entendimento Demorado" refere-se a uma abordagem que valoriza a paciência, a contemplação e a
+        dedicação para alcançar um nível mais profundo de compreensão.
+        "A Arte do Entendimento Demorado" refere-se a uma abordagem que valoriza a paciência, a contemplação e a
+        dedicação para alcançar um nível mais profundo de compreensão.
       </p>
       <p>
-        <span id="content1" class="collapsed">
-          Em um mundo cada vez mais rápido e imediatista, muitas vezes tendemos a buscar respostas rápidas e soluções instantâneas. No entanto, alguns assuntos ou questões complexas exigem tempo e esforço para serem verdadeiramente compreendidos.
-          <br>
-          <br>
-          "A Arte do Entendimento Demorado" propõe que devemos adotar uma abordagem mais lenta e contemplativa ao lidar com tais assuntos. Em vez de apenas aceitar informações superficiais ou respostas prontas, é preciso mergulhar profundamente, explorar diferentes perspectivas, fazer perguntas, buscar conhecimento adicional e refletir sobre o assunto em questão.
-          <br>
-          <br>
-          Essa abordagem incentiva a paciência e a perseverança na busca por respostas e insights mais completos. Ela valoriza o processo de aprendizagem em si, reconhecendo que nem todas as perguntas têm respostas fáceis ou rápidas. Ao adotar essa mentalidade, podemos desenvolver uma compreensão mais profunda e significativa do mundo ao nosso redor, promovendo assim o crescimento pessoal e intelectual.
-          <br>
-          <br>
-          "A Arte do Entendimento Demorado" nos lembra que o verdadeiro conhecimento muitas vezes requer tempo, dedicação e uma mente aberta para explorar as complexidades e nuances de um assunto. É uma abordagem que nos encoraja a apreciar a jornada do aprendizado e a abraçar a busca constante pelo conhecimento em vez de buscar apenas respostas rápidas e superficiais. Bem-vindo! ♥️
-        </span>
+        Em um mundo cada vez mais rápido e imediatista, muitas vezes tendemos a buscar respostas rápidas e soluções
+        instantâneas. No entanto, alguns assuntos ou questões complexas exigem tempo e esforço para serem
+        verdadeiramente compreendidos.
+      <p>
+        "A Arte do Entendimento Demorado" propõe que devemos adotar uma abordagem mais lenta e contemplativa ao lidar
+        com tais assuntos. Em vez de apenas aceitar informações superficiais ou respostas prontas, é preciso mergulhar
+        profundamente, explorar diferentes perspectivas, fazer perguntas, buscar conhecimento adicional e refletir sobre
+        o assunto em questão.
       </p>
-      <button id="toggleButton" onclick="toggleContent(1)">Leia Mais</button>
+      <p>
+        Essa abordagem incentiva a paciência e a perseverança na busca por respostas e insights mais completos. Ela
+        valoriza o processo de aprendizagem em si, reconhecendo que nem todas as perguntas têm respostas fáceis ou
+        rápidas. Ao adotar essa mentalidade, podemos desenvolver uma compreensão mais profunda e significativa do mundo
+        ao nosso redor, promovendo assim o crescimento pessoal e intelectual.
+      </p>
+      <p>
+        "A Arte do Entendimento Demorado" nos lembra que o verdadeiro conhecimento muitas vezes requer tempo, dedicação
+        e uma mente aberta para explorar as complexidades e nuances de um assunto. É uma abordagem que nos encoraja a
+        apreciar a jornada do aprendizado e a abraçar a busca constante pelo conhecimento em vez de buscar apenas
+        respostas rápidas e superficiais. Bem-vindo! ♥️
+      </p>
+      </p>
+      <button id="button" onclick="ReadMore()">Leia Mais</button>
     </div>
-    
-    <div class="container">
-      <small>24 de março de 2023</small>
-      <h1>Algo novo</h1>
-      <div>
-        <img class="img" src="./assets/logo1.png" alt="Apresentação">
-      </div>
-      <p>
-        "A Arte do Entendimento Demorado" refere-se a uma abordagem que valoriza a paciência, a contemplação e a dedicação para alcançar um nível mais profundo de compreensão.
-        "A Arte do Entendimento Demorado" refere-se a uma abordagem que valoriza a paciência, a contemplação e a dedicação para alcançar um nível mais profundo de compreensão.
-      </p>
-      <p>
-        <span id="content2" class="collapsed">
-          Em um mundo cada vez mais rápido e imediatista, muitas vezes tendemos a buscar respostas rápidas e soluções instantâneas. No entanto, alguns assuntos ou questões complexas exigem tempo e esforço para serem verdadeiramente compreendidos.
-          <br>
-          <br>
-          "A Arte do Entendimento Demorado" propõe que devemos adotar uma abordagem mais lenta e contemplativa ao lidar com tais assuntos. Em vez de apenas aceitar informações superficiais ou respostas prontas, é preciso mergulhar profundamente, explorar diferentes perspectivas, fazer perguntas, buscar conhecimento adicional e refletir sobre o assunto em questão.
-          <br>
-          <br>
-          Essa abordagem incentiva a paciência e a perseverança na busca por respostas e insights mais completos. Ela valoriza o processo de aprendizagem em si, reconhecendo que nem todas as perguntas têm respostas fáceis ou rápidas. Ao adotar essa mentalidade, podemos desenvolver uma compreensão mais profunda e significativa do mundo ao nosso redor, promovendo assim o crescimento pessoal e intelectual.
-          <br>
-          <br>
-          "A Arte do Entendimento Demorado" nos lembra que o verdadeiro conhecimento muitas vezes requer tempo, dedicação e uma mente aberta para explorar as complexidades e nuances de um assunto. É uma abordagem que nos encoraja a apreciar a jornada do aprendizado e a abraçar a busca constante pelo conhecimento em vez de buscar apenas respostas rápidas e superficiais. Bem-vindo! ♥️
-        </span>
-      </p>
-      <button id="toggleButton" onclick="toggleContent(2)">Leia Mais</button>
-    </div>
-
-    <div class="container">
-      <small>24 de março de 2023</small>
-      <h1>Algo novo</h1>
-      <div>
-        <img class="img" src="./assets/logo1.png" alt="Apresentação">
-      </div>
-      <p>
-        "A Arte do Entendimento Demorado" refere-se a uma abordagem que valoriza a paciência, a contemplação e a dedicação para alcançar um nível mais profundo de compreensão.
-        "A Arte do Entendimento Demorado" refere-se a uma abordagem que valoriza a paciência, a contemplação e a dedicação para alcançar um nível mais profundo de compreensão.
-      </p>
-      <p>
-        <span id="content3" class="collapsed">
-          Em um mundo cada vez mais rápido e imediatista, muitas vezes tendemos a buscar respostas rápidas e soluções instantâneas. No entanto, alguns assuntos ou questões complexas exigem tempo e esforço para serem verdadeiramente compreendidos.
-          <br>
-          <br>
-          "A Arte do Entendimento Demorado" propõe que devemos adotar uma abordagem mais lenta e contemplativa ao lidar com tais assuntos. Em vez de apenas aceitar informações superficiais ou respostas prontas, é preciso mergulhar profundamente, explorar diferentes perspectivas, fazer perguntas, buscar conhecimento adicional e refletir sobre o assunto em questão.
-          <br>
-          <br>
-          Essa abordagem incentiva a paciência e a perseverança na busca por respostas e insights mais completos. Ela valoriza o processo de aprendizagem em si, reconhecendo que nem todas as perguntas têm respostas fáceis ou rápidas. Ao adotar essa mentalidade, podemos desenvolver uma compreensão mais profunda e significativa do mundo ao nosso redor, promovendo assim o crescimento pessoal e intelectual.
-          <br>
-          <br>
-          "A Arte do Entendimento Demorado" nos lembra que o verdadeiro conhecimento muitas vezes requer tempo, dedicação e uma mente aberta para explorar as complexidades e nuances de um assunto. É uma abordagem que nos encoraja a apreciar a jornada do aprendizado e a abraçar a busca constante pelo conhecimento em vez de buscar apenas respostas rápidas e superficiais. Bem-vindo! ♥️
-        </span>
-      </p>
-      <button id="toggleButton" onclick="toggleContent(3)">Leia Mais</button>
-    </div>
-    
 
     <!-- Rodapé -->
     <div class="footer">
