update all `files`

--- a/index.html
+++ b/index.html
@@ -1,127 +1,103 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/png" href="./assets/logo1.png" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/leiaMais.css" />
+    <title>A Arte do Entendimento Demorado</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" href="./assets/logo1.png">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>A Arte do Entendimento Demorado</title>
-</head>
-
-<body>
-
-  <div id="title">
-    <h1>A Arte do Entendimento Demorado</h1>
-    <div class="manha-noite">
-      <input type="checkbox" class="checkbox" id="chk">
-      <label class="label" for="chk">
-        <i class="fas fa-moon"></i>
-        <i class="fas fa-sun"></i>
-        <i class="ball"></i>
-      </label>
-    </div>
-  </div>
-
-  <header class="header">
-    <ul class="header-ul">
-      <li>
-        <a target="blank" href="">Menu</a>
-      </li>
-
-      <li>
-        <a target="blank" href="#">Novidade</a>
-      </li>
-
-      <li>
-        <a target="blank" href="#">Popular</a>
-      </li>
-
-      <li>
-        <a target="blank" href="#">Loja</a>
-      </li>
-    </ul>
-  </header>
-
-  <main>
-    <div class="container">
-      <small>24 de março de 2023</small>
-      <h1>Algo novo</h1>
-      <div>
-        <img class="img" src="./assets/logo1.png" alt="Apresentação">
+  <body>
+    <div id="title">
+      <h1>A Arte do Entendimento Demorado</h1>
+      <div class="manha-noite">
+        <input type="checkbox" class="checkbox" id="chk" />
+        <label class="label" for="chk">
+          <i class="fas fa-moon"></i>
+          <i class="fas fa-sun"></i>
+          <i class="ball"></i>
+        </label>
       </div>
-      <p>
-        "A Arte do Entendimento Demorado" refere-se a uma abordagem que valoriza a paciência, a contemplação e a
-        dedicação para alcançar um nível mais profundo de compreensão.
-        "A Arte do Entendimento Demorado" refere-se a uma abordagem que valoriza a paciência, a contemplação e a
-        dedicação para alcançar um nível mais profundo de compreensão.
-      </p>
-      <p>
-        Em um mundo cada vez mais rápido e imediatista, muitas vezes tendemos a buscar respostas rápidas e soluções
-        instantâneas. No entanto, alguns assuntos ou questões complexas exigem tempo e esforço para serem
-        verdadeiramente compreendidos.
-      <p>
-        "A Arte do Entendimento Demorado" propõe que devemos adotar uma abordagem mais lenta e contemplativa ao lidar
-        com tais assuntos. Em vez de apenas aceitar informações superficiais ou respostas prontas, é preciso mergulhar
-        profundamente, explorar diferentes perspectivas, fazer perguntas, buscar conhecimento adicional e refletir sobre
-        o assunto em questão.
-      </p>
-      <p>
-        Essa abordagem incentiva a paciência e a perseverança na busca por respostas e insights mais completos. Ela
-        valoriza o processo de aprendizagem em si, reconhecendo que nem todas as perguntas têm respostas fáceis ou
-        rápidas. Ao adotar essa mentalidade, podemos desenvolver uma compreensão mais profunda e significativa do mundo
-        ao nosso redor, promovendo assim o crescimento pessoal e intelectual.
-      </p>
-      <p>
-        "A Arte do Entendimento Demorado" nos lembra que o verdadeiro conhecimento muitas vezes requer tempo, dedicação
-        e uma mente aberta para explorar as complexidades e nuances de um assunto. É uma abordagem que nos encoraja a
-        apreciar a jornada do aprendizado e a abraçar a busca constante pelo conhecimento em vez de buscar apenas
-        respostas rápidas e superficiais. Bem-vindo! ♥️
-      </p>
-      </p>
-      <button id="button" onclick="ReadMore()">Leia Mais</button>
     </div>
 
-    <!-- Rodapé -->
-    <div class="footer">
-      <div class="footer-line"></div>
-      <div class="social">
-        <a target="blank" href="https://github.com/Danielalveslira"><i class="fab fa-github"></i></a>
-        <a target="_blank" href="https://wa.me/5584996550186"><i class="fab fa-whatsapp"></i></a>
-        <a target="blank" href="https://www.linkedin.com/in/dnllira"><i class="fab fa-linkedin"></i></a>
-      </div>
-
-      <ul class="footer-list">
-        <li>
-          <a target="blank" href="">Home</a>
-        </li>
-
-        <li>
-          <a target="blank" href="#">Museu</a>
-        </li>
-
-        <li>
-          <a target="blank" href="#">Sobre</a>
-        </li>
-
-        <li>
-          <a target="blank" href="#">Status</a>
-        </li>
+    <header class="header">
+      <ul class="header-ul">
+        <li><a target="blank" href="">Menu</a></li>
+        <li><a target="blank" href="#">Novidade</a></li>
+        <li><a target="blank" href="#">Popular</a></li>
+        <li><a target="blank" href="#">Loja</a></li>
       </ul>
-      <p class="copyright">
-        &#169;
-        2023 Todos os direitos reservados.
-      </p>
-    </div>
-  </main>
-  <script src="./script.js/script.js"></script>
-</body>
+    </header>
 
+    <main>
+      <div class="container">
+        <small>24 de março de 2023</small>
+        <h1>Algo novo</h1>
+
+        <div>
+          <img class="img" src="./assets/logo1.png" alt="Apresentação" />
+        </div>
+
+        <div class="conteudo">
+          <p>
+            A Arte do Entendimento Demorado refere-se a uma abordagem que
+            valoriza a paciência, a contemplação e a dedicação para alcançar um
+            nível mais profundo de compreensão.
+          </p>
+
+          <p>
+            Em um mundo cada vez mais rápido e imediatista, muitas vezes
+            tendemos a buscar respostas rápidas e soluções instantâneas. No
+            entanto, alguns assuntos ou questões complexas exigem tempo e
+            esforço para serem verdadeiramente compreendidos.
+          </p>
+        </div>
+
+        <button id="toggleButton">Leia Mais</button>
+      </div>
+
+      <div class="footer">
+        <div class="footer-line"></div>
+        <div class="social">
+          <a target="blank" href="https://github.com/Danielalveslira">
+            <i class="fab fa-github"></i
+          ></a>
+          <a target="_blank" href="https://wa.me/5584996550186">
+            <i class="fab fa-whatsapp"></i
+          ></a>
+          <a target="blank" href="https://www.linkedin.com/in/dnllira">
+            <i class="fab fa-linkedin"></i
+          ></a>
+        </div>
+
+        <ul class="footer-list">
+          <li><a target="blank" href="">Home</a></li>
+          <li><a target="blank" href="#">Museu</a></li>
+          <li><a target="blank" href="#">Sobre</a></li>
+          <li><a target="blank" href="#">Status</a></li>
+        </ul>
+
+        <p class="copyright">&#169; 2024 Todos os direitos reservados.</p>
+      </div>
+    </main>
+
+    <script src="./script.js/leiaMais.js"></script>
+    <script src="./script.js/script.js"></script>
+  </body>
 </html>
